--- a/css/main.css
+++ b/css/main.css
@@ -1,56 +1,122 @@
-#hidden-word{
-color:white;
-height: 50px;
-width: 34px;
-margin: 40px;
+#hidden-word {
+    color: white;
+    height: 50px;
+    width: 34px;
+    margin: 40px;
+}
+
+body {
+    background-color: green;
+}
+
+.letters {
+    display: inline;
+    color: orange;
+    font-style: italic;
+    font-size: 30px;
+    letter-spacing: 30px;
+    border: 20px;
+}
+
+container {
+    border: 1px solid black;
+}
+
+h1 {
+    font-family: 'Cookie', cursive;
+    color: #d70000;
+    text-shadow: 0 0 3px #FF0000;
+}
+
+;
+#surprise {
+    max-width: 50%;
+    height: auto;
+}
+
+span {
+    border: 1px 1px 1px 1px;
+    display: inline;
+    border-style: dotted;
+    border-color: red;
+    color: blue;
+    font-size: 25px;
+    float: right;
+    padding: 0px 5px 0px 5px;
+    margin-right: 5px;
+}
+
+.skull {
+    width: 25%;
+    height: auto;
+    position: absolute;
+    left: 500px;
+    top: 47px;
+    border-radius: 20px;
+}
+
+#foto {
+    max-width: 25%;
+    height: auto;
+    position: relative;
+    left: 100px;
+    margin-right: 21px;
+    bottom: 77px;
+    border-radius: 10px;
+    left: 473px;
+}
+
+html {
+    border: red solid 8px;
+    border-style: dotted;
+    border-radius: 10px;
+    margin: 30px;
+    background: white;
+}
+
+.container {
+    border: #e8e1e1 solid 8px;
+    border-style: double;
+    border-radius: 10px;
+}
+
+#randomWord1 {
+    position: absolute;
+    left: 134px;
+    top: 284px;
+}
+
+#show {
+    position: absolute;
+    bottom: 381px;
+    right: 63px;
+}
+
+.loser {
+    position: fixed;
+    top: 8%;
+    left: 36%;
+    width: 416px;
+    height: 392px;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 10px 10px 5px #888888;
+    text-align: center;
+    vertical-align: middle;
+}
 
 
 }
-body{
-  background-color: green;
+.pinata-img {
+    width: 500px;
+    height: 300px;
 }
-#letters {
-  display:inline;
-  color:orange;
-  font-style: italic;
-  font-size: 30px;
-  letter-spacing: 30px;
-  border: 20px;
-
+#refresh {
+    bottom: 85px;
+    position: relative;
 }
-container{
-  border:1px solid black;
-}
-
-h1{
-  font-family: 'Cookie', cursive;
-  color: #d70000	;
-   text-shadow: 0 0 3px #FF0000;
-};
-#surprise{
-  max-width: 50% ;
-  height:auto;
-}
-
-span{
-  border:1px 1px 1px 1px;
-  display: inline;
-  border-style: dotted;
-  border-color: red;
-  color:blue;
-  font-size: 25px;
-  float: right;
-  padding: 0px 5px 0px 5px;
-  margin-right: 5px;
-}
-.skull{
-  width:20%;
-  height: auto;
-  position:fixed;
-  left:500px;
-  top:47px;
-}
-#foto{
-  max-width:50%;
-  height: auto;
+h2 {
+    position: relative;
+    bottom: 56px;
+    color: white;
 }
