--- a/css/main.css
+++ b/css/main.css
@@ -20,9 +20,9 @@ body {
 
 
 h1 {
-    font-family: 'Cookie', cursive;
-    color: #d70000;
-    text-shadow: 0 0 3px #FF0000;
+  font-family: 'Cookie', cursive;
+  color: #FC5185;
+  text-shadow: 0 0 3px #c51148;
 }
 
 ;
@@ -32,24 +32,25 @@ h1 {
 }
 
 span {
-    border: 1px 1px 1px 1px;
-    display: inline;
-    border-style: dotted;
-    border-color: red;
-    color: blue;
-    font-size: 25px;
-    float: right;
-    padding: 0px 5px 0px 5px;
-    margin-right: 5px;
+  display: inline;
+  border-style: dotted;
+  border-color: red;
+  color: blue;
+  font-size: 40px;
+  float: right;
+  padding: 0px 5px 0px 5px;
+  margin-right: 5px;
+  margin-top: 70px;
+
 }
 
 .skull {
-    width: 25%;
-    height: auto;
-    position: absolute;
-    left: 500px;
-    top: 47px;
-    border-radius: 20px;
+  width: 25%;
+  height: auto;
+  position: absolute;
+  margin-left: 368px;
+  margin-top: -85px;
+  border-radius: 20px;
 }
 
 #foto {
@@ -67,7 +68,7 @@ html {
     border: red solid 8px;
     border-style: dotted;
     border-radius: 10px;
-    margin: 30px;
+    margin: 0;
     background: white;
 }
 
@@ -85,9 +86,14 @@ html {
 }
 
 #show {
-    position: absolute;
-    bottom: 381px;
-    right: 63px;
+  bottom: 381px;
+  right: 63px;
+  border-radius: 5px;
+  background-color: darkorange;
+  width: auto;
+  height: auto;
+  color: darkmagenta;
+  border-color: burlywood;
 }
 
 .loser {
